# hugegrad

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  derivative.hpp  fcl.hpp  formatting.hpp  gen-vis.hpp  initialization.hpp  main.cpp  operation.hpp  scalar.cpp  scalar.hpp  tensor.hpp  topo.hpp
test/: CMakeLists.txt  derivative-test.cpp  graph-vis.cpp  init-test.cpp  scalar-test.cpp
